--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.class
 *.log
 
+.idea
+out/
+
 # sbt specific
 .cache
 .history
@@ -11,6 +14,9 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+
+project/project/
+project/target/
 
 # Scala-IDE specific
 .scala_dependencies
